Fixed some alignment issues.  Everything is GREAT

--- a/public/styles/brand-show.css
+++ b/public/styles/brand-show.css
@@ -1,5 +1,7 @@
 /* * { border: 1px solid red; } */
+main {
 
+}
 
 body {
   padding: 10px;
@@ -37,16 +39,22 @@ body {
     color: rgba(255,255,255,1); 
 }
 
+h1 {
+  font-size: 40px;
+}
+
 h1, h2 {
     text-align: center;
     font-family: 'Lobster', cursive;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .section-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 84vh;
+  height: 760px;
 }
 
 .field-background {
@@ -54,11 +62,12 @@ h1, h2 {
   flex-direction: column;
   /* bottom: 30px; */
   background-color: rgba(210, 214, 218, 0.63);
-  position: absolute;
+  /* position: absolute; */
   border-radius: 5px;
   height: 650px;
   width: 500px;
   margin-bottom: 100px;
+  padding-bottom: 10px;
 }
 
 .anchor-link {
@@ -71,6 +80,7 @@ h1, h2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     overflow-wrap: break-word;
     margin: 15px;
+    margin-bottom: 0;
     position: relative;
 }
 
@@ -136,6 +146,7 @@ h1, h2 {
     font-weight: 700;
     text-transform: uppercase;
     font-family: 'Trebuchet MS';
+    width: 100px;
   }
   
   button.big-button {
